Fix input breaking out of container on mobile

--- a/resources/css/forms.pcss
+++ b/resources/css/forms.pcss
@@ -46,7 +46,6 @@
 .search__input {
   position: relative;
   text-transform: none;
-  min-width: 8em;
   padding: 16px 12px 18px 12px;
   width: 100%;
   border: none;
